# opendspx

./: .clang-format  CMakeLists.txt  README.md  opendspxConfig.cmake.in
cmake/: winrc.cmake
docs/: dspx-example.json  dspx-spec.md
include/opendspx/: anchornode.h  audioclip.h  buscontrol.h  clip.h  cliptime.h  content.h  controlpoint.h  converter.h  dynamicmixinganchor.h  global.h  label.h  master.h  mixedsinger.h  model.h  note.h  opendspx_global.h  param.h  paramcurve.h  paramcurveanchor.h  paramcurvefree.h  params.h  phoneme.h  phonemes.h  pronunciation.h  qdspxbase.h  qdspxmodel.h  qdspxnote.h  qdspxparam.h  qdspxtimeline.h  qdspxtrack.h  singer.h  singingclip.h  singlesinger.h  sourcemixingratio.h  sources.h  tempo.h  timeline.h  timesignature.h  track.h  trackcontrol.h  (+3 more)
include/opendspx/converters/: midi.h  opensvip.h  svip.h  ust.h
include/opendspxconverter/: opendspxconverterglobal.h
include/opendspxconverter/midi/: midiconverter.h  midiintermediatedata.h
include/opendspxinterpolator/: interpolator.h  mixinterpolator.h  parameterinterpolator.h  vibratocurve.h
include/opendspxserializer/: jsonconverterv1.h  opendspxserializerglobal.h  serializationerror.h  serializer.h
include/opendspxserializer/private/: declarative_p.h  helpers_p.h  sourcehelpers_p.h
include/opendspxvibrato/: vibratocurve.h
src/: qdspxmodel.cpp  qdspxparam.cpp  qdspxtrack.cpp
src/converter/: midi.cpp  midiconverter.cpp
src/converters/: midi.cpp  opensvip.cpp  svip.cpp  ust.cpp
src/serializer/: converterhelper_p.h  converterhelperfromjson_p.h  converterhelpertojson_p.h  jsonconverterv1.cpp  serializer.cpp  zstdstreambuf.cpp  zstdstreambuf_p.h
tests/: CMakeLists.txt  main.cpp
